--- a/web-page/_config.yml
+++ b/web-page/_config.yml
@@ -3,7 +3,7 @@ title: MyPage
 description: >- # this means to ignore newlines until "baseurl:"
   A simple description of your site.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://yourusername.github.io" # the base hostname & protocol for your site
+url: "https://samppa50.github.io" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
