--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -84,6 +84,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./out
+        working-directory: web-page
 
 
   # Deployment job
